test/js/node/test/parallel/test-stream-pipeline-process.js.log.txt
1151 | 
1152 | const validProperties = new Set(Object.keys(common));
1153 | module.exports = new Proxy(common, {
1154 |   get(obj, prop) {
1155 |     if (!validProperties.has(prop))
1156 |       throw new Error(`Using invalid common property: '${prop}'`);
                   ^
error: Using invalid common property: 'escapePOSIXShell'
      at get (/Users/bun/code/bun/test/js/node/test/common/index.js:1156:13)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-pipeline-process.js:16:3
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)

Bun v1.1.31-debug+5fc53353f (macOS arm64)
